--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,75 +1,75 @@
 * {
   box-sizing: border-box;
-  font-family: 'TT Firs Neue Trl';
+  font-family: 'SVN-TT Hoves';
 }
-* {
-  box-sizing: border-box;
-  font-family: 'Halyard Display';
-}
-#app{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+#app {
   overflow-x: hidden;
 }
-.font-family-lora{
-  font-family: 'Lora';
+.font-family-helvetica {
+  font-family: 'SVN-Helvetica Now';
 }
-.h-100-vh{
+.h-100-vh {
   height: 100vh;
 }
-.h-120-vh{
+.h-120-vh {
   height: 120vh;
 }
-.h-100{
+.h-100 {
   height: 100%;
 }
-.container{
+.w-50 {
+  width: 50%;
+}
+.container-custom {
   width: 90%;
 }
-.w-full{
+.w-full {
   width: 100%;
-}
-.m-auto{
-  margin: auto;
 }
 html {
   scroll-behavior: smooth;
 }
-body{
-    overflow-x: hidden;
+body {
+  overflow-x: hidden;
+  background-color: #000000;
+  color: #fff;
 }
 
-.d-flex{
+.d-flex {
   display: flex;
 }
 
-.text-align-center{
+.text-align-center {
   text-align: center;
 }
-.justify-content-space-between{
+.justify-content-space-between {
   justify-content: space-between;
 }
-.justify-content-center{
+.justify-content-center {
   justify-content: center;
 }
 
-.align-items-center{
+.align-items-center {
   align-items: center;
 }
 
-.align-items-end{
+.align-items-end {
   align-items: end;
 }
 
-.flex-direction-column{
+.flex-direction-column {
   flex-direction: column;
 }
 
-ul{
+ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
   margin-bottom: 0px !important;
 }
-
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -79,52 +79,53 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
 
-button{
+button {
   cursor: pointer;
 }
 
-.button-effect{
+.button-effect {
   background: #bb8824;
   transition: 0.6s;
 }
 
-.mt-2{
+.mt-2 {
   margin-top: 1.5rem;
 }
 
-.button-effect:hover{
+.button-effect:hover {
   background: #000000;
-  
 }
 
-.button-effect-white{
+.button-effect-white {
   background: #bb8824;
   transition: 0.6s;
 }
 
-.flex-wrap{
+.flex-wrap {
   flex-wrap: wrap;
 }
 
+p {
+  margin-bottom: 0em;
+}
 
-
-.button-effect-white:hover{
+.button-effect-white:hover {
   background: #fff;
   color: #000000;
 }
 
-a{
+a {
   color: unset;
 }
-a:hover{
+a:hover {
   color: unset !important;
 }
 
-.icon-plus-animated .icon{
+.icon-plus-animated .icon {
   transform: rotate(0deg);
   transition: 0.4s;
 }
@@ -134,46 +135,49 @@ a:hover{
   transition: 0.4s;
 }
 
-.w-78-percent{
+.w-78-percent {
   width: 78%;
 }
 
-.custom-input-filter .el-input__wrapper,.custom-input-filter .el-textarea__inner{
+.custom-input-filter .el-input__wrapper,
+.custom-input-filter .el-textarea__inner {
   box-shadow: none;
   padding: 6px 12px;
   border: 1px solid rgba(0, 0, 0, 0.7);
 }
 
-.custom-input-filter .el-input__wrapper.is-focus, .custom-input-date .el-input__wrapper.is-focus,.custom-input-filter .el-textarea__inner:focus{
+.custom-input-filter .el-input__wrapper.is-focus,
+.custom-input-date .el-input__wrapper.is-focus,
+.custom-input-filter .el-textarea__inner:focus {
   box-shadow: none;
 }
 
-.custom-input-date .el-input__wrapper{
+.custom-input-date .el-input__wrapper {
   box-shadow: none;
   padding: 6px 12px;
   border: 1px solid rgba(0, 0, 0, 0.7);
 }
 
-.text-align-end{
+.text-align-end {
   text-align: end;
 }
-
 
 .custom-select-input {
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.7);
 }
-.custom-select-input .el-input__wrapper, .custom-select-input .el-input__wrapper.is-focus{
+.custom-select-input .el-input__wrapper,
+.custom-select-input .el-input__wrapper.is-focus {
   box-shadow: none !important;
 }
-.el-select .el-input.is-focus .el-input__wrapper{
+.el-select .el-input.is-focus .el-input__wrapper {
   box-shadow: none !important;
 }
 
-.flex-no-wrap{
+.flex-no-wrap {
   flex-wrap: nowrap;
 }
 
-.border-radius-4{
+.border-radius-4 {
   border-radius: 4px;
 }
