--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -181,3 +181,25 @@ a:hover {
 .border-radius-4 {
   border-radius: 4px;
 }
+:root {
+  --color-app: #e9e9e9;
+  --duration: 2s;
+  --ease: cubic-bezier(0.6, 0, 0.2, 1);
+}
+circle,
+path {
+    animation: squid var(--duration) var(--ease) both;
+    stroke: var(--color);
+    stroke-width: 10;
+    stroke-dasharray: 1;
+}
+
+@keyframes squid {
+    from {
+        stroke-dashoffset: 1;
+    }
+
+    to {
+        stroke-dashoffset: 0;
+    }
+}
