--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -203,3 +203,12 @@ path {
         stroke-dashoffset: 0;
     }
 }
+
+@keyframes fade {
+  0% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
+}
