--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -197,3 +197,11 @@ path {
     opacity: 1;
   }
 }
+@keyframes fade-show {
+  0% {
+    max-height: 0px;
+  }
+  100% {
+    max-height: 300px;
+  }
+}
