--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -2,9 +2,6 @@
   box-sizing: border-box;
   font-family: 'SVN-TT Hoves';
 }
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 #app {
   overflow-x: hidden;
 }
@@ -176,20 +173,20 @@ p {
 }
 circle,
 path {
-    animation: squid var(--duration) var(--ease) both;
-    stroke: var(--color);
-    stroke-width: 10;
-    stroke-dasharray: 1;
+  animation: squid var(--duration) var(--ease) both;
+  stroke: var(--color);
+  stroke-width: 10;
+  stroke-dasharray: 1;
 }
 
 @keyframes squid {
-    from {
-        stroke-dashoffset: 1;
-    }
+  from {
+    stroke-dashoffset: 1;
+  }
 
-    to {
-        stroke-dashoffset: 0;
-    }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 @keyframes fade {
@@ -206,5 +203,27 @@ path {
   }
   100% {
     max-height: 300px;
+  }
+}
+
+.breaking-news {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  p {
+    color: #fff;
+    font-size: 18px;
+    letter-spacing: 1.26px;
+
+    &:last-child {
+      margin-left: 7px;
+    }
+  }
+
+  span {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin-left: 7px;
   }
 }
